--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -248,7 +248,7 @@
 							 <h1>No Branches Available</h1>
 							<% } else { %>
 								<% branches.forEach(branch => { %>
-									<a href="" class="col-md-3" title="view">
+									<a href="/branch/<%= branch.branch_id %>" class="col-md-3" title="view">
 										<div class="card card-stats card-primary" style="height: 100px !important;">
 											<div class="card-body ">
 												<div class="row">
