--- a/views/branch-overview.ejs
+++ b/views/branch-overview.ejs
@@ -166,10 +166,16 @@
 						</div>
 					</div>
 					<ul class="nav">
+						<li class="nav-item">
+							<a href="/admin/dashboard">
+								<i class="la la-dashboard"></i>
+								<p>Dashboard</p>
+							</a>
+						</li>
 						<li class="nav-item active">
 							<a href="#">
 								<i class="la la-dashboard"></i>
-								<p>Overview</p>
+								<p>Branch Overview</p>
 							</a>
 						</li>
 						<li class="nav-item">
@@ -182,7 +188,7 @@
 							<a href="/branch/<%= branch[0].branch_id %>/products">
 								<i class="la la-keyboard-o"></i>
 								<p>Branch Products</p>
-								<span class="badge badge-count"></span>
+								<span class="badge badge-count"><%= products.length %></span>
 							</a>
 						</li>
 						<li class="nav-item">
