--- a/views/branch-products.ejs
+++ b/views/branch-products.ejs
@@ -173,16 +173,29 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href="/admin/product-upload">
+							<a href="/branch/<%= branch[0].branch_id %>">
+								<i class="la la-dashboard"></i>
+								<p>Branch Overview</p>
+							</a>
+						</li>
+						<li class="nav-item">
+							<a href="/stock-branch/<%= branch[0].branch_id %>">
 								<i class="la la-table"></i>
-								<p>Upload Products</p>
+								<p>Stock Branch</p>
 							</a>
 						</li>
 						<li class="nav-item active">
 							<a href="#">
 								<i class="la la-keyboard-o"></i>
-								<p>All Products</p>
+								<p>Branch Products</p>
 								<span class="badge badge-count"><%= products.length %></span>
+							</a>
+						</li>
+						<li class="nav-item">
+							<a href="/admin/all-products">
+								<i class="la la-keyboard-o"></i>
+								<p>Sales</p>
+								<span class="badge badge-count"></span>
 							</a>
 						</li>
 						<li class="nav-item">
@@ -191,39 +204,14 @@
 								<p>Log Out</p>
 							</a>
 						</li>
-						<!-- <li class="nav-item">
-							<a href="notifications.html">
-								<i class="la la-bell"></i>
-								<p>Notifications</p>
-								<span class="badge badge-success">3</span>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a href="typography.html">
-								<i class="la la-font"></i>
-								<p>Typography</p>
-								<span class="badge badge-danger">25</span>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a href="icons.html">
-								<i class="la la-fonticons"></i>
-								<p>Icons</p>
-							</a>
-						</li>
-						<li class="nav-item update-pro">
-							<button  data-toggle="modal" data-target="#modalUpdate">
-								<i class="la la-hand-pointer-o"></i>
-								<p>Update To Pro</p>
-							</button>
-						</li> -->
+						
 					</ul>
 				</div>
 			</div>
 			<div class="main-panel">
 				<div class="content">
 					<div class="container-fluid">
-						<h4 class="page-title"><span class="text-primary">All Products</span></h4>
+						<h4 class="page-title">Branch > <span class="text-primary">Products</span></h4>
 						<div class="row justify-content-center">
                             <div class="card">
                                 <div class="card-header">
@@ -240,6 +228,7 @@
                                                     <th>Retail Price</th>
                                                     <th>Supplier</th>
                                                     <th>Category</th>
+                                                    <th>Quantity</th>
                                                     <th>Action</th>
                                                 </tr>
                                             </thead>
@@ -252,6 +241,7 @@
                                                         <td><%= product.retail_price %></td>
                                                         <td><%= product.name %></td>
                                                         <td><%= product.category %></td>
+                                                        <td><%= product.quantity %></td>
                                                         <td><button class="btn-sm btn-primary" style="cursor: pointer;">Edit</button></td>
                                                     </tr>
                                                 <% }) %>
