--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -186,7 +186,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href="tables.html">
+							<a href="#">
 								<i class="la la-th"></i>
 								<p>Log Out</p>
 							</a>
