--- a/views/stock-branch.ejs
+++ b/views/stock-branch.ejs
@@ -192,14 +192,14 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href="/admin/all-products">
+							<a href="#">
 								<i class="la la-keyboard-o"></i>
 								<p>Sales</p>
 								<span class="badge badge-count"></span>
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href="tables.html">
+							<a href="#">
 								<i class="la la-th"></i>
 								<p>Log Out</p>
 							</a>
