Modified the branch Module

--- a/views/stock-branch.ejs
+++ b/views/stock-branch.ejs
@@ -204,32 +204,6 @@
 								<p>Log Out</p>
 							</a>
 						</li>
-						<!-- <li class="nav-item">
-							<a href="notifications.html">
-								<i class="la la-bell"></i>
-								<p>Notifications</p>
-								<span class="badge badge-success">3</span>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a href="typography.html">
-								<i class="la la-font"></i>
-								<p>Typography</p>
-								<span class="badge badge-danger">25</span>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a href="icons.html">
-								<i class="la la-fonticons"></i>
-								<p>Icons</p>
-							</a>
-						</li>
-						<li class="nav-item update-pro">
-							<button  data-toggle="modal" data-target="#modalUpdate">
-								<i class="la la-hand-pointer-o"></i>
-								<p>Update To Pro</p>
-							</button>
-						</li> -->
 					</ul>
 				</div>
 			</div>
@@ -256,8 +230,13 @@
                                             </div>
 
                                             <div class="form-group">
-                                                <label for="quantity">Quantity</label>
-                                                <input type="number" class="form-control" id="quantity" name="quantity" placeholder="Enter quantity" required>
+                                                <label for="quantity">Wholesale Quantity</label>
+                                                <input type="number" class="form-control" id="quantity" name="wholesaleQuantity" placeholder="Enter wholsale quantity" value="1" required>
+                                            </div>
+
+											<div class="form-group">
+                                                <label for="quantity">Retail Quantity</label>
+                                                <input type="number" class="form-control" id="quantity" name="retailQuantity" placeholder="Enter retail quantity" value="1" required>
                                             </div>
 
                                                 
