--- a/views/branch-products.ejs
+++ b/views/branch-products.ejs
@@ -228,7 +228,9 @@
                                                     <th>Retail Price</th>
                                                     <th>Supplier</th>
                                                     <th>Category</th>
-                                                    <th>Quantity</th>
+                                                    <th>Wholesale Quantity</th>
+                                                    <th>Retail Quantity</th>
+                                                    <th>Status</th>
                                                     <th>Action</th>
                                                 </tr>
                                             </thead>
@@ -241,7 +243,9 @@
                                                         <td><%= product.retail_price %></td>
                                                         <td><%= product.name %></td>
                                                         <td><%= product.category %></td>
-                                                        <td><%= product.quantity %></td>
+                                                        <td><%= product.stock_quantity_wholesale %></td>
+                                                        <td><%= product.stock_quantity_retail %></td>
+														<td><%= product.status %></td>
                                                         <td><button class="btn-sm btn-primary" style="cursor: pointer;">Edit</button></td>
                                                     </tr>
                                                 <% }) %>
