--- a/views/branch-products.ejs
+++ b/views/branch-products.ejs
@@ -192,7 +192,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href="#">
+							<a href="/branch/<%= branch[0].branch_id %>/sales">
 								<i class="la la-keyboard-o"></i>
 								<p>Sales</p>
 								<span class="badge badge-count"></span>
