--- a/views/branch-products.ejs
+++ b/views/branch-products.ejs
@@ -239,8 +239,8 @@
                                                     <tr>
                                                         <th scope="row"><%= index + 1 %></th>
                                                         <td><%= product.product_name %></td>
-                                                        <td><%= product.wholesale_price %></td>
-                                                        <td><%= product.retail_price %></td>
+                                                        <td>₦<%= product.wholesale_price %></td>
+                                                        <td>₦<%= product.retail_price %></td>
                                                         <td><%= product.name %></td>
                                                         <td><%= product.category %></td>
                                                         <td><%= product.stock_quantity_wholesale %></td>
