--- a/views/sales.ejs
+++ b/views/sales.ejs
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>MaryBill Conglomerate Ltd. - Branch sales</title>
+	<title>MaryBill Conglomerate Ltd. - Branch Sales</title>
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
@@ -16,9 +16,9 @@
 	<div class="wrapper">
 		<div class="main-header">
 			<div class="logo-header">
-				<a href="index.html" class="logo">
+				<a href="/admin/dashboard" class="logo">
 					MaryBill Conglomerate
-				</a>a
+				</a>
 				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
@@ -113,7 +113,7 @@
 										<div class="u-img"><img src="/img/profile-icon.png" alt="user"></div>
 										<div class="u-text">
 											<h4>Steven</h4>
-											<p class="text-muted">hello@themekita.com</p><a href="profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
+											<p class="text-muted">hello@themekita.com</p><a href="#" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
 										</div>
 									</li>
 									<div class="dropdown-divider"></div>
@@ -147,7 +147,7 @@
 							</a>
 							<div class="clearfix"></div>
 
-							<div class="collapse in" id="collapseExample" aria-expanded="true" style="">
+							<div class="collapse in" id="collapseExample" aria-expanded="true">
 								<ul class="nav">
 									<li>
 										<a href="#profile">
@@ -202,7 +202,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href="#">
+							<a href="/logout">
 								<i class="la la-th"></i>
 								<p>Log Out</p>
 							</a>
@@ -214,7 +214,7 @@
 			<div class="main-panel">
 				<div class="content">
 					<div class="container-fluid">
-						<h4 class="page-title"><span class="text-primary">Branch Sales</span></h4>
+						<h4 class="page-title"><%= branch[0].branch_name %> > <span class="text-primary">Branch Sales</span></h4>
 						<div class="row justify-content-center">
                             <div class="card">
                                 <div class="card-header">
