--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <title>MaryBill Conglomerate Ltd. - All Products</title>
     <link rel="stylesheet" href="https://unpkg.com/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="icon" type="image/x-icon" href="/img/app_icon.ico">
 </head>
 <body class="bg-light">
     <!-- Login 13 - Bootstrap Brain Component -->
