--- a/views/stock-branch.ejs
+++ b/views/stock-branch.ejs
@@ -2,18 +2,19 @@
 <html>
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>Ready Bootstrap Dashboard</title>
+	<title>MaryBill Conglomerate Ltd. - Stock Branch</title>
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
 	<link rel="stylesheet" href="/css/ready.css">
 	<link rel="stylesheet" href="/css/demo.css">
+	<link rel="icon" type="image/x-icon" href="/img/app_icon.ico">
 </head>
 <body>
 	<div class="wrapper">
 		<div class="main-header">
 			<div class="logo-header">
-				<a href="index.html" class="logo">
+				<a href="/admin/dashboard" class="logo">
 					MaryBill Conglomerate
 				</a>
 				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
@@ -110,7 +111,7 @@
 										<div class="u-img"><img src="/img/profile-icon.png" alt="user"></div>
 										<div class="u-text">
 											<h4>Steven</h4>
-											<p class="text-muted">hello@themekita.com</p><a href="profile.html" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
+											<p class="text-muted">hello@themekita.com</p><a href="#" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
 										</div>
 									</li>
 									<div class="dropdown-divider"></div>
@@ -199,7 +200,7 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a href="#">
+							<a href="/logout">
 								<i class="la la-th"></i>
 								<p>Log Out</p>
 							</a>
@@ -210,7 +211,7 @@
 			<div class="main-panel">
 				<div class="content">
 					<div class="container-fluid">
-						<h4 class="page-title">Branch > <span class="text-primary">Stock</span></h4>
+						<h4 class="page-title"><%= branch[0].branch_name %> > <span class="text-primary">Stock</span></h4>
 						<div class="row justify-content-center">
                                 <div class="col-md-6">
                                     <div class="card">
