Implemented middleware to update the lastInspectedDate of a branch, also modified the get dashboard controller in the adminController.js to render a formatted date

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<title>MaryBill Conglomerate Ltd. - Dashboard</title>
-	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport' />
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
+		name='viewport' />
 	<link rel="stylesheet" href="/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
+	<link rel="stylesheet"
+		href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i">
 	<link rel="stylesheet" href="/css/ready.css">
 	<link rel="stylesheet" href="/css/demo.css">
 	<link rel="icon" type="image/x-icon" href="/img/app_icon.ico">
 </head>
+
 <body>
 	<div class="wrapper">
 		<div class="main-header">
@@ -17,14 +21,15 @@
 				<a href="/admin/dashboard" class="logo">
 					MaryBill Conglomerate
 				</a>
-				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
+				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse"
+					data-target="collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<button class="topbar-toggler more"><i class="la la-ellipsis-v"></i></button>
 			</div>
 			<nav class="navbar navbar-header navbar-expand-lg">
 				<div class="container-fluid">
-					
+
 					<form class="navbar-left navbar-form nav-search mr-md-3" action="">
 						<div class="input-group">
 							<input type="text" placeholder="Search ..." class="form-control">
@@ -37,7 +42,8 @@
 					</form>
 					<ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
 						<li class="nav-item dropdown hidden-caret">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<i class="la la-envelope"></i>
 							</a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -48,7 +54,8 @@
 							</div>
 						</li>
 						<li class="nav-item dropdown hidden-caret">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 								<i class="la la-bell"></i>
 								<span class="notification">3</span>
 							</a>
@@ -59,12 +66,13 @@
 								<li>
 									<div class="notif-center">
 										<a href="#">
-											<div class="notif-icon notif-primary"> <i class="la la-user-plus"></i> </div>
+											<div class="notif-icon notif-primary"> <i class="la la-user-plus"></i>
+											</div>
 											<div class="notif-content">
 												<span class="block">
 													New user registered
 												</span>
-												<span class="time">5 minutes ago</span> 
+												<span class="time">5 minutes ago</span>
 											</div>
 										</a>
 										<a href="#">
@@ -73,18 +81,18 @@
 												<span class="block">
 													Rahmad commented on Admin
 												</span>
-												<span class="time">12 minutes ago</span> 
+												<span class="time">12 minutes ago</span>
 											</div>
 										</a>
 										<a href="#">
-											<div class="notif-img"> 
+											<div class="notif-img">
 												<img src="/img/profile2.jpg" alt="Img Profile">
 											</div>
 											<div class="notif-content">
 												<span class="block">
 													Reza send messages to you
 												</span>
-												<span class="time">12 minutes ago</span> 
+												<span class="time">12 minutes ago</span>
 											</div>
 										</a>
 										<a href="#">
@@ -93,106 +101,113 @@
 												<span class="block">
 													Farrah liked Admin
 												</span>
-												<span class="time">17 minutes ago</span> 
+												<span class="time">17 minutes ago</span>
 											</div>
 										</a>
 									</div>
 								</li>
 								<li>
-									<a class="see-all" href="javascript:void(0);"> <strong>See all notifications</strong> <i class="la la-angle-right"></i> </a>
+									<a class="see-all" href="javascript:void(0);"> <strong>See all
+											notifications</strong> <i class="la la-angle-right"></i> </a>
 								</li>
 							</ul>
 						</li>
 						<li class="nav-item dropdown">
-							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#" aria-expanded="false"> <img src="/img/profile-icon.png" alt="user-img" width="36" class="img-circle"><span >Steven</span></span> </a>
+							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#"
+								aria-expanded="false"> <img src="/img/profile-icon.png" alt="user-img" width="36"
+									class="img-circle"><span>Steven</span></span> </a>
 							<ul class="dropdown-menu dropdown-user">
 								<li>
 									<div class="user-box">
 										<div class="u-img"><img src="/img/profile-icon.png" alt="user"></div>
 										<div class="u-text">
 											<h4>Steven</h4>
-											<p class="text-muted">hello@themekita.com</p><a href="#" class="btn btn-rounded btn-danger btn-sm">View Profile</a></div>
+											<p class="text-muted">hello@themekita.com</p><a href="#"
+												class="btn btn-rounded btn-danger btn-sm">View Profile</a>
 										</div>
-									</li>
-									<div class="dropdown-divider"></div>
-									<a class="dropdown-item" href="#"><i class="ti-user"></i> My Profile</a>
-									<a class="dropdown-item" href="#"></i> My Balance</a>
-									<a class="dropdown-item" href="#"><i class="ti-email"></i> Inbox</a>
-									<div class="dropdown-divider"></div>
-									<a class="dropdown-item" href="#"><i class="ti-settings"></i> Account Setting</a>
-									<div class="dropdown-divider"></div>
-									<a class="dropdown-item" href="#"><i class="fa fa-power-off"></i> Logout</a>
-								</ul>
-								<!-- /.dropdown-user -->
-							</li>
-						</ul>
+									</div>
+								</li>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="#"><i class="ti-user"></i> My Profile</a>
+								<a class="dropdown-item" href="#"></i> My Balance</a>
+								<a class="dropdown-item" href="#"><i class="ti-email"></i> Inbox</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="#"><i class="ti-settings"></i> Account Setting</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="#"><i class="fa fa-power-off"></i> Logout</a>
+							</ul>
+							<!-- /.dropdown-user -->
+						</li>
+					</ul>
+				</div>
+			</nav>
+		</div>
+		<div class="sidebar">
+			<div class="scrollbar-inner sidebar-wrapper">
+				<div class="user">
+					<div class="photo">
+						<img src="/img/profile-icon.png">
 					</div>
-				</nav>
-			</div>
-			<div class="sidebar">
-				<div class="scrollbar-inner sidebar-wrapper">
-					<div class="user">
-						<div class="photo">
-							<img src="/img/profile-icon.png">
-						</div>
-						<div class="info">
-							<a class="" data-toggle="collapse" href="#collapseExample" aria-expanded="true">
-								<span>
-									Steven
-									<span class="user-level">Administrator</span>
-									<span class="caret"></span>
-								</span>
-							</a>
-							<div class="clearfix"></div>
+					<div class="info">
+						<a class="" data-toggle="collapse" href="#collapseExample" aria-expanded="true">
+							<span>
+								Steven
+								<span class="user-level">Administrator</span>
+								<span class="caret"></span>
+							</span>
+						</a>
+						<div class="clearfix"></div>
 
-							<div class="collapse in" id="collapseExample" aria-expanded="true">
-								<ul class="nav">
-									<li>
-										<a href="#profile">
-											<span class="link-collapse">My Profile</span>
-										</a>
-									</li>
-									<li>
-										<a href="#edit">
-											<span class="link-collapse">Edit Profile</span>
-										</a>
-									</li>
-									<li>
-										<a href="#settings">
-											<span class="link-collapse">Settings</span>
-										</a>
-									</li>
-								</ul>
-							</div>
+						<div class="collapse in" id="collapseExample" aria-expanded="true">
+							<ul class="nav">
+								<li>
+									<a href="#profile">
+										<span class="link-collapse">My Profile</span>
+									</a>
+								</li>
+								<li>
+									<a href="#edit">
+										<span class="link-collapse">Edit Profile</span>
+									</a>
+								</li>
+								<li>
+									<a href="#settings">
+										<span class="link-collapse">Settings</span>
+									</a>
+								</li>
+							</ul>
 						</div>
 					</div>
-					<ul class="nav">
-						<li class="nav-item active">
-							<a href="#">
-								<i class="la la-dashboard"></i>
-								<p>Dashboard</p>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a href="/admin/product-upload">
-								<i class="la la-table"></i>
-								<p>Upload Product</p>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a href="/admin/all-products">
-								<i class="la la-keyboard-o"></i>
-								<p>All Products</p>
-								<span class="badge badge-count"><%= products.length %></span>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a href="/logout">
-								<i class="la la-th"></i>
-								<p>Log Out</p>
-							</a>
-						</li>
-						<!-- <li class="nav-item">
+				</div>
+				<ul class="nav">
+					<li class="nav-item active">
+						<a href="#">
+							<i class="la la-dashboard"></i>
+							<p>Dashboard</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/admin/product-upload">
+							<i class="la la-table"></i>
+							<p>Upload Product</p>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/admin/all-products">
+							<i class="la la-keyboard-o"></i>
+							<p>All Products</p>
+							<span class="badge badge-count">
+								<%= products.length %>
+							</span>
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/logout">
+							<i class="la la-th"></i>
+							<p>Log Out</p>
+						</a>
+					</li>
+					<!-- <li class="nav-item">
 							<a href="notifications.html">
 								<i class="la la-bell"></i>
 								<p>Notifications</p>
@@ -218,15 +233,15 @@
 								<p>Update To Pro</p>
 							</button>
 						</li> -->
-					</ul>
-				</div>
+				</ul>
 			</div>
-			<div class="main-panel">
-				<div class="content">
-					<div class="container-fluid">
-						<h4 class="page-title">Dashboard > <span class="text-primary">Branches</span></h4>
-						<div class="row justify-content-center">
-							<!-- <div class="col-md-3">
+		</div>
+		<div class="main-panel">
+			<div class="content">
+				<div class="container-fluid">
+					<h4 class="page-title">Dashboard > <span class="text-primary">Branches</span></h4>
+					<div class="row justify-content-center">
+						<!-- <div class="col-md-3">
 								<div class="card card-stats card-warning">
 									<div class="card-body ">
 										<div class="row">
@@ -245,10 +260,10 @@
 									</div>
 								</div>
 							</div> -->
-							<% if (branches.length < 1) { %>
-							 <h1>No Branches Available</h1>
+						<% if (branches.length < 1) { %>
+							<h1>No Branches Available</h1>
 							<% } else { %>
-								<% branches.forEach(branch => { %>
+								<% branches.forEach(branch=> { %>
 									<a href="/branch/<%= branch.branch_id %>/products" class="col-md-3" title="view">
 										<div class="card card-stats card-primary" style="height: 100px !important;">
 											<div class="card-body ">
@@ -260,19 +275,23 @@
 													</div>
 													<div class="col-7 d-flex align-items-center">
 														<div class="numbers">
-															<h6 class="card-title"><%= branch.branch_name %></h6>
-															<p class="card-category">Last Inspected: <span><%= branch.last_inspected %></span></p>
+															<h6 class="card-title">
+																<%= branch.branch_name %>
+															</h6>
+															<p class="card-category">Last Inspected: <span>
+																	<%= branch.last_inspected %>
+																</span></p>
 														</div>
 													</div>
 												</div>
 											</div>
 										</div>
 									</a>
-								<% }) %>	
-							<% } %>
-							
-							
-							<!-- <div class="col-md-3">
+									<% }) %>
+										<% } %>
+
+
+											<!-- <div class="col-md-3">
 								<div class="card card-stats card-danger">
 									<div class="card-body">
 										<div class="row">
@@ -291,7 +310,7 @@
 									</div>
 								</div>
 							</div> -->
-							<!-- <div class="col-md-3">
+											<!-- <div class="col-md-3">
 								<div class="card card-stats card-primary">
 									<div class="card-body ">
 										<div class="row">
@@ -310,7 +329,7 @@
 									</div>
 								</div>
 							</div> -->
-							<!-- <div class="col-md-3">
+											<!-- <div class="col-md-3">
 								<div class="card card-stats card-primary">
 									<div class="card-body ">
 										<div class="row">
@@ -329,7 +348,7 @@
 									</div>
 								</div>
 							</div> -->
-<!-- 							<div class="col-md-3">
+											<!-- 							<div class="col-md-3">
 								<div class="card card-stats">
 									<div class="card-body ">
 										<div class="row">
@@ -405,8 +424,8 @@
 									</div>
 								</div>
 							</div> -->
-						</div>
-						<!-- <div class="row">
+					</div>
+					<!-- <div class="row">
 							<div class="col-md-3">
 								<div class="card">
 									<div class="card-header">
@@ -438,7 +457,7 @@
 								</div>
 							</div>
 						</div> -->
-						<!-- <div class="row row-card-no-pd">
+					<!-- <div class="row row-card-no-pd">
 							<div class="col-md-4">
 								<div class="card">
 									<div class="card-body">
@@ -531,7 +550,7 @@
 								</div>
 							</div>
 						</div> -->
-						<!-- <div class="row">
+					<!-- <div class="row">
 							<div class="col-md-4">
 								<div class="card">
 									<div class="card-header">
@@ -716,9 +735,9 @@
 								</div>
 							</div>
 						</div> -->
-					</div>
 				</div>
-				<!-- <footer class="footer">
+			</div>
+			<!-- <footer class="footer">
 					<div class="container-fluid">
 						<nav class="pull-left">
 							<ul class="nav">
@@ -744,8 +763,8 @@
 						</div>				
 					</div>
 				</footer> -->
-			</div>
 		</div>
+	</div>
 	</div>
 	<!-- Modal -->
 	<!-- <div class="modal fade" id="modalUpdate" tabindex="-1" role="dialog" aria-labelledby="modalUpdatePro" aria-hidden="true">
@@ -783,4 +802,5 @@
 <script src="/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js"></script>
 <script src="/js/ready.min.js"></script>
 <script src="/js/demo.js"></script>
+
 </html>
